crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file_clickbench_duckdb_memory_on_zero_results_clickbench_q36_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q36"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                              |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                                                                                                                                                                                                |
|               |   Projection: hits.ClientIP, hits.ClientIP - Int64(1), hits.ClientIP - Int64(2), hits.ClientIP - Int64(3), count(*) AS c                                                                                                                                          |
|               |     Aggregate: groupBy=[[hits.ClientIP, __common_expr_1 AS hits.ClientIP - Int64(1), __common_expr_1 AS hits.ClientIP - Int64(2), __common_expr_1 AS hits.ClientIP - Int64(3)]], aggr=[[count(Int64(1)) AS count(*)]]                                             |
|               |       Projection: CAST(hits.ClientIP AS Int64) AS __common_expr_1, hits.ClientIP                                                                                                                                                                                  |
|               |         BytesProcessedNode                                                                                                                                                                                                                                        |
|               |           TableScan: hits projection=[ClientIP]                                                                                                                                                                                                                   |
| physical_plan | SortExec: TopK(fetch=10), expr=[c@4 DESC], preserve_partitioning=[false]                                                                                                                                                                                          |
|               |   CoalescePartitionsExec                                                                                                                                                                                                                                          |
|               |     ProjectionExec: expr=[ClientIP@0 as ClientIP, hits.ClientIP - Int64(1)@1 as hits.ClientIP - Int64(1), hits.ClientIP - Int64(2)@2 as hits.ClientIP - Int64(2), hits.ClientIP - Int64(3)@3 as hits.ClientIP - Int64(3), count(*)@4 as c]                        |
|               |       AggregateExec: mode=FinalPartitioned, gby=[ClientIP@0 as ClientIP, hits.ClientIP - Int64(1)@1 as hits.ClientIP - Int64(1), hits.ClientIP - Int64(2)@2 as hits.ClientIP - Int64(2), hits.ClientIP - Int64(3)@3 as hits.ClientIP - Int64(3)], aggr=[count(*)] |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                               |
|               |           RepartitionExec: partitioning=Hash([ClientIP@0, hits.ClientIP - Int64(1)@1, hits.ClientIP - Int64(2)@2, hits.ClientIP - Int64(3)@3], 24), input_partitions=24                                                                                           |
|               |             AggregateExec: mode=Partial, gby=[ClientIP@1 as ClientIP, __common_expr_1@0 - 1 as hits.ClientIP - Int64(1), __common_expr_1@0 - 2 as hits.ClientIP - Int64(2), __common_expr_1@0 - 3 as hits.ClientIP - Int64(3)], aggr=[count(*)]                   |
|               |               ProjectionExec: expr=[CAST(ClientIP@0 AS Int64) as __common_expr_1, ClientIP@0 as ClientIP]                                                                                                                                                         |
|               |                 BytesProcessedExec                                                                                                                                                                                                                                |
|               |                   SchemaCastScanExec                                                                                                                                                                                                                              |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1                                                                                                                                                                         |
|               |                       FallbackOnZeroResultsScanExec                                                                                                                                                                                                               |
|               |                         CoalescePartitionsExec                                                                                                                                                                                                                    |
|               |                           RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1                                                                                                                                                                   |
|               |                             DuckSqlExec sql= SELECT "ClientIP" FROM hits                                                                                                                                                                                          |
|               |                                                                                                                                                                                                                                                                   |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
